# cobol

./: .gitignore  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  FLAGS.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  STATUS.md  pyproject.toml  setup.py
.github/: CODEOWNERS  CONTRIBUTING.md  codeql.yml  config.yml  pull_request_template.md  task.yml
.github/codeql/: codeql-config.yml
.github/rulesets/: protect-default.json  protect-track-branches.json
.github/workflows/: ci.yml  codeql.yml
data/: manifest.json
data/benchmark/: drift_instances.jsonl  drift_instances.manifest.json  drift_instances.plausible.jsonl  human_review.sample15.jsonl  judge_overrides.jsonl  (+4 more)
docs/: CONTRACT.md  README.md  T0.5-ast-decision-note.md  branching.md  preprocessor-notes.md  team-workflow.md  tool-semantics.md  track-a-brief.md  track-a-phase1-brief.md  track-b-brief.md  track-c-brief.md
scripts/: build_t2_7_inputs.py  build_verify_nli_cache.py  fetch_corpora.sh  pin_regulations.py  setup_cobc.sh  smoke_tools.py
tests/: test_agent_loop.py  test_benchmark_build.py  test_calibration.py  test_call_graph.py  test_chunker.py  test_clauses.py  test_cleaner.py  test_cobc_policy.py  test_copybooks.py  test_dataflow.py  test_eval_metrics.py  test_eval_run.py  test_hyde.py  test_judge.py  test_m4_live.py  test_m4_report.py  test_mutate.py  test_packaging.py  test_paragraphs.py  test_phase2_inputs.py  test_policy_hunts.py  test_retrieval.py  test_run_cobol.py  test_scaffold.py  test_schemas.py  test_search_regulations.py  test_seed_instances.py  test_slicer.py  test_sources.py  test_splits.py  test_stub_tools.py  test_tool_types.py  test_tools.py  test_trajectory_eval.py  test_verify.py
(+267 files in other folders)
