[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cobol-archaeologist"
version = "0.1.0"
description = "Detecting where legacy COBOL banking code has drifted from the financial regulation it was built to satisfy."
requires-python = ">=3.12,<3.13"
dependencies = [
    "tree_sitter==0.21.3",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
