[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cobol-archaeologist"
version = "0.1.0"
description = "Detecting where legacy COBOL banking code has drifted from the financial regulation it was built to satisfy."
requires-python = ">=3.12,<3.13"
dependencies = [
    "tree_sitter==0.21.3",
    "pydantic>=2",
    "pdfplumber",
]

[project.scripts]
cobol-archaeologist = "cobol_archaeologist.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
# Retrieval model backend (T3.2). Pinned neural embedder + cross-encoder; small
# enough for air-gapped on-prem (T7.2). Offline gates do not need this; only the
# @network gates and the relevance-report build do.
models = [
    "sentence-transformers>=2.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-m 'not network'"
testpaths = ["tests"]
markers = [
    "network: test loads pinned model weights / needs network; run locally (T3.2 Gate B/C)",
]
